[gd_scene load_steps=4 format=3 uid="uid://c7jevn0snyha4"]

[ext_resource type="PackedScene" uid="uid://btvjiy030fgo6" path="res://screens/base_screen/base_screen.tscn" id="1_m23c8"]
[ext_resource type="Texture2D" uid="uid://bsn4maji3ujmw" path="res://screens/title_screen/assets/title_texture.png" id="2_0y1ej"]
[ext_resource type="Script" path="res://screens/title_screen/title_screen.gd" id="2_5uove"]

[node name="TitleScreen" instance=ExtResource( "1_m23c8" )]
script = ExtResource( "2_5uove" )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
offset_left = 80.0
offset_top = 60.0
offset_right = 944.0
offset_bottom = 540.0

[node name="TitleTexture" type="TextureRect" parent="VBoxContainer" index="0"]
offset_left = 123.0
offset_right = 740.0
offset_bottom = 104.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( "2_0y1ej" )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer" index="1"]
offset_top = 108.0
offset_right = 864.0
offset_bottom = 480.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/CenterContainer" index="0"]
minimum_size = Vector2(160, 0)
offset_left = 352.0
offset_top = 106.0
offset_right = 512.0
offset_bottom = 266.0

[node name="Start" type="Button" parent="VBoxContainer/CenterContainer/Buttons" index="0"]
offset_right = 160.0
offset_bottom = 37.0
text = "Start
"

[node name="Settings" type="Button" parent="VBoxContainer/CenterContainer/Buttons" index="1"]
offset_top = 41.0
offset_right = 160.0
offset_bottom = 78.0
text = "Settings"

[node name="About" type="Button" parent="VBoxContainer/CenterContainer/Buttons" index="2"]
offset_top = 82.0
offset_right = 160.0
offset_bottom = 119.0
text = "About"

[node name="Quit" type="Button" parent="VBoxContainer/CenterContainer/Buttons" index="3"]
offset_top = 123.0
offset_right = 160.0
offset_bottom = 160.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/CenterContainer/Buttons/Settings" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/Buttons/About" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/Buttons/Quit" to="." method="_on_quit_button_pressed"]
